# OxCalc

./: .gitignore  AGENTS.md  CHARTER.md  CURRENT_BLOCKERS.md  Cargo.toml  OPERATIONS.md  OxCalc.slnx  README.md  rust-toolchain.toml
.beads/: config.yaml  issues.jsonl
archive/: README.md  W046_CLEANUP_MANIFEST.md
docs/: BEADS.md  DNATREECALC_STACK_ROADMAP_ENGINE_GOAL.md  HISTORY.md  IN_PROGRESS_FEATURE_WORKLIST.md  LOCAL_EXECUTION_DOCTRINE.md  SPEC.md  WORKSET_REGISTER.md
formal/: README.md
rust/: README.md
scripts/: bootstrap-tla-tools.ps1  check-w046-proof-carrying-trace.py  check-w047-w048-showcase-examples.ps1  check-w048-closure-audit.ps1  check-w048-closure-audit.py  check-w048-conformance.ps1  check-w048-conformance.py  check-w048-excel-multithread-variant-probes.ps1  check-w048-excel-root-report-probes.ps1  check-w048-excel-version-inventory.ps1  check-w048-formal-cycle-artifacts.ps1  check-w048-formal-cycle-artifacts.py  check-w048-innovation-ledger.ps1  check-w048-innovation-ledger.py  check-w048-iterative-profile-decision.ps1  check-w048-iterative-profile-decision.py  check-w048-materialized-graphs.ps1  run-tlc.ps1  (+10 more)
src/oxcalc-core/: Cargo.toml
src/oxcalc-core/src/: authored_delta.rs  consumer.rs  coordinator.rs  correctness_floor.rs  dependency.rs  error_algebra.rs  excel_grid_reference.rs  formula.rs  formula_identity.rs  grid.rs  grid_reference_machine.rs  grid_runner.rs  grid_scale.rs  lib.rs  numerical_reduction.rs  oxdoc_ingest.rs  oxfml_session.rs  recalc.rs  recalc_wave.rs  reference_profiles.rs  reference_vocabulary.rs  repository.rs  rich_value_capability.rs  sparse_reader.rs  stream_semantics.rs  structural.rs  structured_table.rs  table_backing.rs  tree_reference_rebind.rs  tree_reference_resolution.rs  tree_reference_system.rs  treecalc.rs  treecalc_fixture.rs  treecalc_runner.rs  treecalc_scale.rs  upstream_host.rs  upstream_host_fixture.rs  upstream_host_runner.rs  value_cache.rs  workbook_reference_catalog.rs  (+2 more)
src/oxcalc-core/src/grid/: ast.rs  authored.rs  coords.rs  error.rs  geometry.rs  machine.rs  reference_engine.rs  runner.rs  scale.rs
src/oxcalc-core/src/grid/machine/: axis_state.rs  calc_ref_sheet.rs  calc_ref_workbook.rs  differential.rs  host_info.rs  invalidation.rs  optimized_provider.rs  optimized_sheet.rs  optimized_storage.rs  optimized_valuation.rs  overlay.rs  phase_timing.rs  r1c1_plan.rs  rebind.rs  runtime_trace.rs  spill_ledger.rs  warm_no_op.rs  workbook_coordinator.rs  workbook_nodes.rs
src/oxcalc-core/src/grid/reference_engine/: parse.rs  profile_codec.rs  transform.rs
src/oxcalc-core/src/grid/scale/: scenarios_aggregate.rs  scenarios_layout.rs  scenarios_logical.rs  scenarios_lookup.rs  scenarios_r1c1_scalar.rs  scenarios_special.rs
src/oxcalc-core/tests/: external_workbook_references.rs  host_worker_passivity_spike.rs  treecalc_dynamic_array_plumbing.rs  upstream_host_scaffolding.rs
src/oxcalc-tracecalc/: Cargo.toml
src/oxcalc-tracecalc/src/: assertions.rs  continuous_assurance.rs  contracts.rs  diversity_seam.rs  formal_assurance.rs  implementation_conformance.rs  independent_conformance.rs  lib.rs  machine.rs  operated_assurance.rs  oracle_matrix.rs  oxfml_fixture_bridge.rs  oxfml_seam.rs  pack_capability.rs  replay_mappings.rs  retained_failures.rs  runner.rs  scale_semantic_binding.rs  stage2_replay.rs  w057_snapshot_coverage.rs  witness.rs
(+7148 files in other folders)
