[workspace]
resolver = "2"
members = [
    "rust/oxcalc-core",
    "rust/oxcalc-tracecalc",
    "rust/oxcalc-tracecalc-cli",
]

[workspace.package]
edition = "2024"
license = "MIT"
publish = false

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
