[package]
name = "oxcalc-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
oxfml_core = { path = "../../../OxFml/crates/oxfml_core" }
oxfunc_core = { path = "../../../OxFunc/crates/oxfunc_core" }
