[package]
name = "oxcalc-tracecalc"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
oxcalc-core = { path = "../oxcalc-core" }
oxfunc_core = { path = "../../../OxFunc/crates/oxfunc_core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
